# advent_of_code

./: .flake8  .gitignore  README.md  pyproject.toml  ruff.toml
.template/: solution.py
01/b/: output.json  solution.py
02/a/: report.json
02/b/: result.txt  solution.py
03/a/: solution.py
03/b/: result.txt
04/a/: output.txt  result.txt
04/b/: output.txt
05/b/: solution.py
06/a/: solution.py
06/b/: output.txt
07/b/: solution.py
08/a/: output.txt
08/b/: problem.txt  result.txt
09/b/: solution.py
10/a/: output.txt
10/b/: result.txt  solution.py
11/a/: solution.py
11/b/: solution.py
12/a/: solution.py
12/b/: problem.txt  result.txt
13/a/: output.txt  solution.py
14/a/: output.txt  result.txt
14/b/: result.txt  solution.py  solution_nonworking.py
15/a/: map.txt  solution.py
15/b/: input.txt  map.txt  solution.py
16/a/: input_bin.txt  result.txt  solution.py
16/b/: output.txt  problem.txt  solution.py
2021/01/a/: output.json  solution.py
2021/02/a/: solution.py
2021/02/b/: report.json
2021/03/b/: output.json  solution.py
2021/04/b/: result.txt
2021/05/a/: output.txt
2021/05/b/: output.txt  problem.txt
2021/06/a/: result.txt
2021/06/b/: result.txt  solution.py
2021/07/a/: result.txt  solution.py
2021/07/b/: output.txt  problem.txt  result.txt
2021/09/a/: output.txt  solution.py
2021/09/b/: result.txt
2021/10/a/: solution.py
2021/10/b/: output.txt
2021/11/a/: output.txt  solution.py
2021/12/b/: solution.py
2021/13/a/: solution.py
2021/13/b/: result.txt
2021/14/a/: solution.py
2021/14/b/: output.txt
2021/15/a/: output.txt
2021/16/b/: solution.py
2023/01/a/: output_left.txt  output_right.txt
2023/01/b/: solution.sh
2024/01/a/: result.txt  solution.py
2024/01/b/: problem.md
2024/02/a/: input.txt  output.txt
2024/02/b/: problem.md  solution.py
challenges/2021/02/a/: result.txt
challenges/2021/03/a/: output.json  result.txt
challenges/2021/03/b_alt/: solution.py
challenges/2021/04/a/: solution.py
challenges/2021/04/b/: problem.txt  solution.py
challenges/2021/05/a/: solution.py
challenges/2021/07/a/: output.txt
scripts/: fetch_aoc_challenge.py  fetch_aoc_session.py  new_challenge.py  new_step.py  populate_aoc_challenge.py  venv_setup.sh
scripts/template/step/: problem.txt  solution.py
src/aoc_manager/: fetch.py
src/aoc_manager/cli/: __init__.py
(+171 files in other folders)
